--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "mdx-deck": "2.3.2",
     "code-surfer": "2.0.0-alpha.4"
   },
-  "name": "state-machines-meet-react-hooks"
+  "name": "state-machines-meet-react-hooks",
+  "dependencies": {
+    "antd": "^3.19.3"
+  }
 }
