--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"there are no tests\""
   },
   "devDependencies": {
-    "mdx-deck": "2.3.2",
-    "code-surfer": "2.0.0-alpha.4"
+    "code-surfer": "2.0.0-alpha.4",
+    "file-loader": "4.0.0",
+    "mdx-deck": "2.3.2"
   },
   "name": "state-machines-meet-react-hooks",
   "dependencies": {
