--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "name": "state-machines-meet-react-hooks",
   "dependencies": {
-    "antd": "^3.19.3",
-    "xstate": "^4.6.1"
+    "antd": "3.19.3",
+    "xstate": "4.6.1"
   }
 }
